# wup

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  deps.json  goal.yaml  pyproject.toml  testql-deps.json  tree.txt  wup.yaml  wup.yaml.example
.wup-web/: events.jsonl
docs/: 1.md  2.md  3.md  ANOMALY_DETECTION.md  NOTIFICATIONS.md  TESTQL_INTEGRATION.md  WUP_ASSISTANT.md
examples/: c2004_monorepo_demo.py  ci_cd_integration.py  testql_demo.py  testql_integration.py  visual_diff_demo.py  webhook_notifications.py
examples/fastapi-app/: Dockerfile  README.md  main.py  wup.yaml
examples/fastapi-app/app/users/: routes.py
examples/flask-app/: README.md  main.py  wup.yaml
examples/flask-app/app/auth/: routes.py
examples/multi-service/: docker-compose.yml
examples/multi-service/auth-service/: Dockerfile  main.py  wup.yaml
examples/multi-service/auth-service/app/auth/: routes.py
examples/multi-service/payments-service/: main.py  wup.yaml
examples/multi-service/payments-service/app/payments/: routes.py
examples/multi-service/users-service/: main.py  wup.yaml
examples/multi-service/users-service/app/users/: routes.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_e2e.py  test_testql_watcher.py  test_web_client.py  test_wup.py
wup/: __init__.py  _ast_detector.py  _hash_detector.py  _yaml_detector.py  anomaly_detector.py  anomaly_models.py  assistant.py  cli.py  config.py  core.py  dependency_mapper.py  testql_discovery.py  testql_watcher.py  visual_diff.py  web_client.py
wup-web/: README.md  pyproject.toml
wup-web/tests/: conftest.py
wup-web/wup_web/: __init__.py  __main__.py  main.py  models.py  storage.py
wup-web/wup_web/routers/: __init__.py  drivers.py  events.py
wup/models/: __init__.py  config.py
wupbro/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
wupbro/wupbro/: __init__.py  __main__.py  main.py  models.py
wupbro/wupbro/templates/: index.html
