[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wup"
version = "0.2.14"
description = "WUP (What's Up) - Intelligent file watcher for regression testing in large projects"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["wup", "watcher", "testing", "regression", "file-monitoring"]
dependencies = [
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.license]
text = "Apache-2.0"
[tool.setuptools.packages.find]
include = ["wup*"]

[project.scripts]
wup = "wup.cli:app"

[project.urls]
Homepage = "https://github.com/semcod/wup"
Repository = "https://github.com/semcod/wup"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
